# shelley

./: .gitignore  CMakeLists.txt  README.md  design.md
include/: CMakeLists.txt
include/shelley/: autoconf.h.in  shelley.h  utility.h
src/: CMakeLists.txt  shelley.cpp  utility.cpp
tests/: CMakeLists.txt
tests/shelley/: CMakeLists.txt  utility.cpp
